--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Aatish Gupta | MS in Mechanical Engineering at Carnegie Mellon University
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
+  <meta name="description" content="I am currently a Master's student in Mechanical Engineering at Carnegie Mellon University. My interests are primarily in robotics and design. I started working with soft robotic actuators in high school and have continued to pursue this field throughout my academic career. My experience in research has been extremely fulfilling and has led me to pursue my Master's degree with the hope of continuing to work on emerging technologies.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
   <meta name="keywords" content="Put your name, skills and some coding keywords" />
   <link rel="stylesheet" href="index.css" />
