--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <meta name="description" content="I am currently a Master's student in Mechanical Engineering at Carnegie Mellon University. My interests are primarily in robotics and design. I started working with soft robotic actuators in high school and have continued to pursue this field throughout my academic career. My experience in research has been extremely fulfilling and has led me to pursue my Master's degree with the hope of continuing to work on emerging technologies.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="keywords" content="Aatish Gupta, Rapid Prototyping, Machine Design, Casting, Robotics, Python, Global Sourcing, Research and Development, Mechanical Engineering, Solidworks, Matlab, Java, C++, Onshape, 3D printing, Arduino, CAD, Mechatronics, CFD, Simulation" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Aatish Gupta</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>MS in Mechanical Engineering at Carnegie Mellon University</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
