--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7058150876103729152" height="676" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 
   <!-- Put your site title here -->
   <title>
