--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#research" class="nav__link">Research</a></li>
+          <li class="nav__item"><a href="#coursework" class="nav__link">Coursework</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
           <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
+            <a href="#resume" class="nav__link">Resume</a>
           </li>
         </ul>
       </nav>
@@ -68,7 +68,7 @@
 
     <!-- ***** Work ***** -->
 
-    <section class="work" id="work">
+    <section class="Research" id="work">
       <div class="row">
         <h2>My Work</h2>
         <div class="work__boxes">
@@ -163,7 +163,7 @@
 
     <!-- ***** Clients ***** -->
 
-    <section class="client" id="clients">
+    <section class="coursework" id="coursework">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
@@ -204,7 +204,7 @@
 
   <!-- ***** Contact ***** -->
 
-  <section class="contact" id="contact">
+  <section class="resume" id="resume">
     <div class="row">
       <h2>Get in Touch</h2>
       <div class="contact__info">
