--- a/index.html
+++ b/index.html
@@ -78,27 +78,12 @@
           <div class="work__box">
             <div class="work__text">
               <h3>Portfolio Template</h3>
-              <p>
-                A free Open Source Portfolio for anyone to use for free.
-              </p>
-              <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
-              </ul>
-
-              <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
-              </div>
-            </div>
-            <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <h2>Research Projects</h2>
+            
+            <div class="project">
+                <h3>Modular Multi-Deformation Mode Soft Pneumatic Actuators</h3>
+                <p><strong>Rowan Robotics & Human Machine Interactions Lab</strong> | September 2022 - December 2022</p>
+                <p>Worked on creating a modular soft robotic actuator with three degrees of freedom, involving ANSYS simulations, fabrication method development, and experimental verification.</p>
             </div>
           </div>
 
