--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>MS in Mechanical Engineering at Carnegie Mellon University</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+
       </div>
     </div>
   </header>
@@ -83,7 +83,22 @@
             <div class="project">
                 <h3>Modular Multi-Deformation Mode Soft Pneumatic Actuators</h3>
                 <p><strong>Rowan Robotics & Human Machine Interactions Lab</strong> | September 2022 - December 2022</p>
-                <p>Worked on creating a modular soft robotic actuator with three degrees of freedom, involving ANSYS simulations, fabrication method development, and experimental verification.</p>
+                <p>Soft actuators have gained popularity in materials and engineering research for their use cases in handling delicate objects and for their potential biomedical applications. Current research on soft actuators shows promise, but the application potential of a given actuator is limited by its lack of reconfigurability. For example, the popular PneuNets actuator cannot form multi-unit connections without the use of adhesives or mold modifications. In this paper we propose the design of a reconfigurable soft actuator with multiple degrees to mitigate this limitation.
+
+Our design phase for the actuator consisted of simulations of the design of a 3D model, followed by fabrication. The design was created in SOLIDWORKS and consecutively tested in ANSYS/explicit, a commercial finite element simulation environment.The geometry of the design was iteratively improved based on the results of the simulations. The actuator consists of “unit cells” made of silicone rubber and 3D printed thermoplastic polyurethane (TPU) which are rigidly connected together using 3D printed polylactic acid (PLA) connectors. The silicone rubber bladder deforms as it is filled with air, and its deformation mode is guided by a less flexible TPU shell. When connected together, these unit cells produce extensile or bending motions. One of the main focuses of the paper is the impact of the aspect ratio of inter-unit connections on the deformation modes of the actuator. By shifting the position of each unit with respect to the following one, we found in the simulations that we could impact the way the actuator extended or bended.
+
+Our experimental design included both the fabrication and testing. The silicone rubber bladders were produced using a three part PLA mold to produce half of each bladder. The halves were then joined together in the final step. As stated before, the PLA and TPU parts were 3D printed.
+
+To test the actuator’s force output, we placed three connected units inside a load frame and recorded the force applied as a function of pressure applied to the actuator. The actuator was able to produce up to 40 N of force at a pressure of 15 kPa. 
+
+To test the actuator’s free displacement characteristics, we suspended the actuator vertically from a custom testing apparatus. Horizontal and vertical displacement were measured for the actuator in multiple configurations. We varied the aspect ratio of the connections, the number of unit cells in the configuration, the angular position of unit cells with respect to one another, and the level of pressure applied. We were able to determine that each one of these factors had a significant impact on the deformation modes of the actuator. In the case of extensile motion, connection aspect ratio increased or decreased the range of motion by 60%.  
+
+To test the actuator’s potential for gripping objects, two actuators were configured as a gripper. The gripper was able to grasp an orange (210 g), a banana (182 g), an apple (130 g), and an uncooked egg (60 g), all without damaging the objects and while supporting their full weight.
+
+The actuator was also configured into a mobile crawling robot to evaluate its potential for locomotion. The robot was able to move around 11.9% of its body length per stride. While this metric is not easily compared to the literature, its speed of 16 meters per hour is comparable to locomotive soft robots in the cited literature (18m/h).
+
+In conclusion, we demonstrated the potential of a reconfigurable soft robotic actuator. We showed that the actuator has potential use cases in gripping delicate objects and in producing mobile robots. We evaluated the impact of its capacity for reconfiguration on its ability to apply force, its deformation modes, and its use cases. Our next steps include making the design easier and cheaper to fabricate, and adding unit cells to evaluate its impact on functionality and applicability. We have shown that the introduction of reconfigurability to actuators can have a huge impact on the field of soft robotics.
+</p>
             </div>
           </div>
 
