--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     <div class="work__text">
                         <h3>MATLAB Modeling of Temperature Distribution Over a Planar Surface</h3>
                         <p>Personal Interest Project<br>February 2022</p>
+                        <h3><img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*exlPB8mu_zQlnqLCYK7oLg.png" alt="" width="720" height="337" /></h3>
                         <h3>Introduction</h3>
 <p>I developed a method for plotting temperature distribution over a planar surface using MATLAB. I was inspired by a simple Excel-based approach shown in a heat transfer class, where cell temperatures were calculated as the average of surrounding cells. I decided to create a more complex MATLAB solution using simultaneous equations to get exact temperature values.</p>
 <h3>Design</h3>
