--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                         <img src="https://github.com/aatishg01/Portfolio/blob/main/Screenshot%202024-12-08%20203843.png?raw=true" alt="Exo-skin-esphere project" width="856" height="577">
                     </div>
                 </div>
-
+                </section>
+         <section class="work" id="coursework">
+              <h2>Course Projects</h2>
                 <div class="work__box">
                     <div class="work__text">
                         <h3>The Wyrm: RoboSoft 2022 Terrestrial Competition Entry</h3>
