--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 </div>
                 </section>
          <section class="work" id="coursework">
+              <div class="row">
               <h2>Course Projects</h2>
                 <div class="work__box">
                     <div class="work__text">
@@ -177,4 +178,15 @@
 <p>I implemented the method in MATLAB, testing it on 3x3, 5x5 and 20x20 surfaces.</p>
 <h3>Conclusion</h3>
 <p>The method successfully produces 3D surface plots of temperature distribution. I note that this is an elementary implementation that could be improved to: - Model 2D shapes other than squares - Extend to 3D shapes - Import and model temperature distribution on 3D files like STLs - Account for material properties The full MATLAB script is available on GitHub for further development.</p>
+</section>
+                          <section class="work" id="about">
+            <div class="row">
+                <h2>Research Projects</h2>
+                <div class="work__box">
+                    <div class="work__text">
+                        <h2>About Me</h2>
+<p>I am currently a Master's student in Mechanical Engineering at Carnegie Mellon University. My interests are primarily in robotics and design. I started working with soft robotic actuators in high school and have continued to pursue this field throughout my academic career. My experience in research has been extremely fulfilling and has led me to pursue my Master's degree with the hope of continuing to work on emerging technologies.</p></div>
+                   
+                </div>
 
+                </section>
