--- a/index.html
+++ b/index.html
@@ -190,3 +190,11 @@
                 </div>
 
                 </section>
+
+<h3>Embedding the PDF file Using Object Tag</h3>
+    <object class="pdf" 
+            data=
+"https://github.com/aatishg01/Portfolio2/blob/master/Aatish%20Gupta%20resume%2010.24.24.pdf"
+            width="800"
+            height="500">
+    </object>
