--- a/index.html
+++ b/index.html
@@ -191,11 +191,46 @@
 
                 </section>
 <section class="work" id="resume">
-<h3>Resume</h3>
-    <object class="pdf" 
-            data=
-"https://github.com/aatishg01/Portfolio2/blob/master/Aatish%20Gupta%20resume%2010.24.24.pdf"
-            width="800"
-            height="500">
-    </object>
+   <div class="row">
+<h2>Resume</h2>
+LinkedIn: <a href="https://linkedin.com/in/aatish-gupta-8b830419a">linkedin.com/in/aatish-gupta-8b830419a</a></p>
+<p>Email: aatish01@gmail.com</p>
+<h2>Education</h2>
+<h3>Carnegie Mellon University</h3>
+<p>Pittsburgh, PA<br /> Master of Science in Mechanical Engineering<br /> Expected Graduation: 2025<br /> QPA: 3.84</p>
+<h3>Rowan University</h3>
+<p>Glassboro, NJ<br /> Bachelor of Science in Mechanical Engineering<br /> Graduated: 2023<br /> GPA: 3.53<br /> - Physics Minor<br /> - Bantivoglio Honors Concentration</p>
+<h2>Experience</h2>
+<h3>CERLAB - Dr. Kenji Shimada</h3>
+<p><strong>Master's Student Researcher</strong><br /> Carnegie Mellon University, Pittsburgh, PA<br /> January 2024 - Present<br /> - Conducting research in multi-agent semantic SLAM for industrial mapping and inspection.</p>
+<h3>Robotics &amp; Physical Human-Machine Interactions Lab - Dr. Mitja Trkov</h3>
+<p><strong>Soft Robotics Research Assistant</strong><br /> Rowan University, Glassboro, NJ<br /> February 2022 - October 2023<br /> - Developed novel pneumatic and cable-driven soft robotic actuators.<br /> - Used ANSYS to model behavior of soft robotics actuators and refine their design.<br /> - Developed novel polymer casting methods that served as a critical aspect of a published journal.</p>
+<h3>Stanford D. School</h3>
+<p><strong>University Innovation Fellow</strong><br /> Glassboro, NJ<br /> April 2021- Present<br /> - Led workshops and training seminars on design thinking.<br /> - Led a project to extend design thinking training to non-engineering and non-business majors through curricular changes.<br /> - Guided other University Innovation Fellows with their projects as a UI guide.</p>
+<h3>Ellenby Technologies</h3>
+<p><strong>Mechanical Engineering Intern</strong><br /> Woodbury Heights, NJ<br /> June 2022 - August 2022<br /> - Conducted R&amp;D for two new retail cash management devices.<br /> - Communicated with domestic and international partners for parts sourcing and quoting.<br /> - Used machine shop tools to fabricate prototypes.<br /> - Used SolidWorks plastics and statics simulations to determine the viability and manufacturability of injection molded parts.</p>
+<h3>Children's Defense Fund</h3>
+<p><strong>Servant Leader Intern</strong><br /> Camden, NJ<br /> June 2021-August 2021<br /> - Served K-8 students and provided instruction in literacy and STEM to prevent summer learning loss and create opportunities.<br /> - Facilitated discussion around equity and social action.</p>
+<h3>Aersys</h3>
+<p><strong>Mechatronics Engineering Intern</strong><br /> New Brunswick, NJ<br /> June 2021-August 2021<br /> - Designed and developed novel parts, mechanisms, and robotic systems for use with autonomous drones and rovers.</p>
+<h3>Rutgers Lab for Machines, Manufacturing, and Mechatronics - Dr. Aaron Mazzeo</h3>
+<p><strong>Student Researcher</strong><br /> Rutgers University, New Brunswick, NJ<br /> June 2018 - August 2018<br /> - Managed and participated in a team of three high school students to create a novel soft robotic assisted grip device for patients with disabilities.</p>
+<h3>Studio 231</h3>
+<p><strong>Maker Space Technician</strong><br /> Glassboro, NJ<br /> September 2021 - May 2022<br /> - Designed and led workshops to teach Rowan University students skills including 3D printing, design thinking, and low-resolution prototyping.<br /> - Acted as the lead developer in a small team to create the website linked above and to advocate for, develop, and implement a system to consolidate and track 3D print submissions.</p>
+<h3>LifeLens Technologies</h3>
+<p><strong>Robotic Automation Engineering Intern</strong><br /> Ivyland, PA<br /> May 2024-August 2024<br /> - Designed parts to aid automation of manual tasks<br /> - Designed and built proof-of-concept prototypes for new manufacturing methods</p>
+<h2>Technical Skills</h2>
+<ul>
+<li><strong>Programming languages:</strong> C++, Python, MATLAB, JavaScript</li>
+<li><strong>Controls Coursework:</strong> Dynamic Systems and Controls, Modern Control Theory, Multivariable Linear Control (Robust Control), Advanced Control Systems Integration</li>
+<li><strong>Software:</strong> AutoCAD Inventor, SolidWorks, OnShape, Blender, ANSYS, MATLAB</li>
+<li><strong>Machining and Prototyping:</strong> 3D Printing, Polymer Casting Fabrication methods, laser cutting/engraving, machining (manual mill, lathe, drill press), designing for injection molding</li>
+</ul>
+<h2>Competitions</h2>
+<h3>RoboSoft 2022 Terrestrial Race</h3>
+<p>Edinburgh, Scotland<br /> April 2022<br /> - Managed and participated in a team of six fellow students to develop a terrestrial locomotive soft robot to compete virtually against international teams.</p>
+<h2>Journal Articles</h2>
+<p>Pagliocca, N., Gupta, A., Knospler, J., Singh, N. &amp; Trkov, M. (2023) Modular Multi-Deformation Mode Soft Pneumatic Actuators, Sensors and Actuators A: Physical, https://doi.org/10.1016/i.sna.2024.115830</p>
           </section>
+                             
+
