--- a/index.html
+++ b/index.html
@@ -232,5 +232,34 @@ LinkedIn: <a href="https://linkedin.com/in/aatish-gupta-8b830419a">linkedin.com/
 <h2>Journal Articles</h2>
 <p>Pagliocca, N., Gupta, A., Knospler, J., Singh, N. &amp; Trkov, M. (2023) Modular Multi-Deformation Mode Soft Pneumatic Actuators, Sensors and Actuators A: Physical, https://doi.org/10.1016/i.sna.2024.115830</p>
           </section>
-                             
+ <!-- ***** Footer ***** -->
+
+  <footer role="contentinfo" class="footer">
+    <div class="row">
+      <!-- Update the links to point to your accounts -->
+      <ul class="footer__social-links">
+        <li class="footer__social-link-item">
+          <a href="https://github.com/aatishg01" title="Link to Github Profile">
+            <img src="./images/github.svg" class="footer__social-image" alt="Github">
+          </a>
+        </li>
+        <li class="footer__social-link-item">
+          <a href=https://www.linkedin.com/in/aatish-gupta-8b830419a/">
+            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+          </a>
+        </li>
+      </ul>
+
+      <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
+      <p>
+        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
+      </p>
+      <div class="footer__github-buttons">
+        <iframe
+          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
+          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
+        </iframe>
+      </div>
+    </div>
+  </footer>                             
 
