--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                         <p>The actuator was also configured into a mobile crawling robot to evaluate its potential for locomotion. The robot was able to move around 11.9% of its body length per stride. While this metric is not easily compared to the literature, its speed of 16 meters per hour is comparable to locomotive soft robots in the cited literature (18m/h).</p>
                         <p>In conclusion, we demonstrated the potential of a reconfigurable soft robotic actuator. We showed that the actuator has potential use cases in gripping delicate objects and in producing mobile robots. We evaluated the impact of its capacity for reconfiguration on its ability to apply force, its deformation modes, and its use cases. Our next steps include making the design easier and cheaper to fabricate, and adding unit cells to evaluate its impact on functionality and applicability. We have shown that the introduction of reconfigurability to actuators can have a huge impact on the field of soft robotics.</p>
                     </div>
-                    <div class="work__image-box">
-                        <img src="https://github.com/aatishg01/Portfolio/blob/main/Screenshot%202024-12-08%20211407.png?raw=true" alt="Soft Pneumatic Actuators" width="454" height="289">
+                      <div class="work__image-box">
+                        <img src="https://ars.els-cdn.com/content/image/1-s2.0-S0924424724008240-ga1_lrg.jpg" alt="" width="522" height="397">
                     </div>
+               
                 </div>
 
                 <div class="work__box">
@@ -74,6 +75,9 @@
                         <p>We began development on this robot prior to the finalization of the competition guidelines, which created nebulous and challenging design parameters. The design consisted of a McKibben air muscle paired with a 3D printed PETG spring that allowed the robot to expand and contract to achieve locomotion. The device was steered using servo motors that would "flap" to reorient the device and navigated using an IR sensor.</p>
                         <p>The device was able to achieve locomotion on flat surfaces as well as limited locomotion over sand and loose terrain. It was also able to avoid obstacles using the IR input.</p>
                         <p>Our team was able to deliver a functional robot on the day of the competition. We were awarded the best Junior/Senior Clinic: Research Category by the Rowan Mechanical Engineering department.</p>
+                    </div>
+                     <div class="work__image-box">
+                        <img src="https://github.com/aatishg01/Portfolio/blob/main/Screenshot%202024-12-08%20211407.png?raw=true" alt="Soft Pneumatic Actuators" width="454" height="289">
                     </div>
                     <div class="work__image-box">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/cDbBM-D1Ex0" frameborder="0" allowfullscreen></iframe>
