--- a/index.html
+++ b/index.html
@@ -265,5 +265,11 @@ LinkedIn: <a href="https://linkedin.com/in/aatish-gupta-8b830419a">linkedin.com/
         </iframe>
       </div>
     </div>
+      <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="opNeMW" data-pen-title="#3December real particle blob" data-user="elifitch" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/elifitch/pen/opNeMW">
+  #3December real particle blob</a> by Eli Fitch (<a href="https://codepen.io/elifitch">@elifitch</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
   </footer>                             
 
