--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
                 <div class="work__box">
                     <div class="work__text">
 
-<p>I am currently a Master's student in Mechanical Engineering at Carnegie Mellon University. My interests are primarily in robotics and design. I started working with soft robotic actuators in high school and have continued to pursue this field throughout my academic career. My experience in research has been extremely fulfilling and has led me to pursue my Master's degree with the hope of continuing to work on emerging technologies.</p></div>
+<p>I recently graduated with my Master's degree in Mechanical Engineering from Carnegie Mellon University. My interests are primarily in robotics and design. I started working with soft robotic actuators in high school and have continued to pursue this field throughout my academic career. My experience in research has been extremely fulfilling and led me to pursue my Master's degree with the hope of continuing to work on emerging technologies. I am now searching for meaningful employment in controls systems engineering, robotics, mechanical design, or a combination of these fields.</p></div>
                    
                 </div>
 
                 </section>
 <section class="work" id="resume">
    <div class="row">
-<h2>Resume</h2>
+<h1>Resume</h1>
 LinkedIn: <a href="https://linkedin.com/in/aatish-gupta-8b830419a">linkedin.com/in/aatish-gupta-8b830419a</a></p>
 <p>Email: aatish01@gmail.com</p>
 <h2>Education</h2>
 <h3>Carnegie Mellon University</h3>
-<p>Pittsburgh, PA<br /> Master of Science in Mechanical Engineering<br /> Expected Graduation: 2025<br /> QPA: 3.84</p>
+<p>Pittsburgh, PA<br /> Master of Science in Mechanical Engineering<br /> Graduated: 2025<br /> QPA: 3.77</p>
 <h3>Rowan University</h3>
 <p>Glassboro, NJ<br /> Bachelor of Science in Mechanical Engineering<br /> Graduated: 2023<br /> GPA: 3.53<br /> - Physics Minor<br /> - Bantivoglio Honors Concentration</p>
 <h2>Experience</h2>
