--- a/index.html
+++ b/index.html
@@ -109,8 +109,13 @@
                     </div>
                     
                     <div class="work__image-box">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/nh8o7OpUQHE?si=kfFtBE5QeMqwNyBB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
+    <figure class="project-figure">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nh8o7OpUQHE?si=kfFtBE5QeMqwNyBB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <figcaption>Multi-UAV Search and Rescue Simulation</figcaption>
+    </figure>
+</div>
                 </div>
             </div>
         </section>
