--- a/index.html
+++ b/index.html
@@ -109,7 +109,35 @@
                     </div>
                     
                     <div class="work__image-box">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/nh8o7OpUQHE?si=wm2vFb_NKxp2HNIy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" 
+                                src="https://www.youtube.com/embed/nh8o7OpUQHE" 
+                                title="YouTube video player" 
+                                frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                referrerpolicy="strict-origin-when-cross-origin" 
+                                allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="work__box">
+                    <div class="work__text">
+                        <h3>Bittle MPC: Model Predictive Control for Quadrupedal Gait Design without Force Sensing</h3>
+                        <p>16-745 Optimal Control and Reinforcement Learning | Carnegie Mellon University<br>
+                        </p>
+                        <p>This project demonstrates stable quadrupedal locomotion without force sensing on resource-constrained hardware (ESP32) using a dual-stage MPC framework. We combine offline trajectory optimization via MuJoCo MJPC—generating stable gaits and autonomous recovery maneuvers such as self-righting from falls—with online embedded control through TinyMPC. Experimental results show that TinyMPC achieves 3× greater displacement than PID tracking of reference trajectories, while MJPC successfully synthesizes dynamically feasible gaits and recovery behaviors in simulation.
+
+                            However, hardware deployment reveals a sim-to-real gap: insufficient foot clearance in optimized gaits causes stumbling on irregular surfaces, and actuator latency limits the transfer of recovery maneuvers. Despite these challenges, our framework validates the viability of force-sensor-free locomotion on microcontrollers, with TinyMPC enabling efficient real-time re-optimization. This work provides a foundation for deploying advanced MPC-based control on low-cost robotic platforms.</p>
+                    </div>
+                    
+                    <div class="work__image-box">
+                        <iframe width="560" height="315" 
+                                src="https://www.youtube.com/embed/gZVtml4Kebc?si=EA6VFAqXglOCgaop" 
+                                title="YouTube video player" 
+                                frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                referrerpolicy="strict-origin-when-cross-origin" 
+                                allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
             </div>
