--- a/index.html
+++ b/index.html
@@ -140,6 +140,25 @@
                         </iframe>
                     </div>
                 </div>
+                <div class="work__box">
+                    <div class="work__text">
+                        <h3>Magnasketch Drone Control</h3>
+                        <p>24-774 Advanced Control System Integration | Carnegie Mellon University<br>
+                        </p>
+                        <p>The use of Unmanned Aerial Vehicles (UAVs) for aerial tasks and environmental manipulation is increasingly desired. This can be demonstrated via art tasks. This paper presents the development of Magnasketch, capable of translating image inputs into art on a magnetic drawing board via a Bitcraze Crazyflie 2.0 quadrotor. Optimal trajectories were generated using a Model Predictive Control (MPC) formulation newly incorporating magnetic force dynamics. A Z-compliant magnetic drawing apparatus was designed for the quadrotor. Experimental results of the novel controller tested against the existing Position High Level Commander showed comparable performance. Although slightly outperformed in terms of error, with average errors of 3.9 cm, 4.4 cm, and 0.5 cm in x, y, and z respectively, the Magnasketch controller produced smoother drawings with the added benefit of full state control.</p>
+                    </div>
+                    
+                    <div class="work__image-box">
+                        <iframe width="560" height="315" 
+                                src="https://www.youtube.com/embed/jex1lPUhJAU?si=Jyv-b7_oYWsqxUvw" 
+                                title="YouTube video player" 
+                                frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                referrerpolicy="strict-origin-when-cross-origin" 
+                                allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
             </div>
         </section>
 
